Z-index issue fixed, error-message on login/signup styled

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -211,7 +211,7 @@
 
 .dropdown-content {
     position: absolute;
-    z-index: 1;
+    z-index: 5;
     top: 100%;
     display: flex;
     flex-direction: column;
