--- a/client/src/pages/LoginPage/LoginPage.css
+++ b/client/src/pages/LoginPage/LoginPage.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 540px;
+  height: 560px;
   width: 500px;
   border-radius: 10px;
   margin: 40px;
@@ -111,6 +111,10 @@
   height: 50%;
 }
 
+.noAccount {
+  margin-bottom: 30px;
+}
+
 .noAccount > p {
   margin: 5px;
 }
@@ -142,4 +146,8 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+}
+
+.error-message {
+  color: rgb(127, 23, 23);
 }
